--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "map-compare-static",
   "version": "0.0.0",
   "dependencies": {
+    "async": "^1.0.0",
     "phantom": "^0.7.2"
   }
 }
